// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render component with disabled state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c6 {
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  background-color: #FFFFFF;
  width: 20px;
  height: 20px;
  border: 1px solid #A7B0BE;
  border-radius: 50%;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

fieldset[data-dimension='s'] .c5 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c5 {
  border: 1px solid #A7B0BE;
}

.c3 {
  position: relative;
  display: inline-block;
  min-width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  min-width: 18px;
  height: 18px;
}

.c4 {
  opacity: 0;
  width: 0;
  height: 0;
}

.c4:checked:disabled + .c5 {
  border: 6px solid #A7B0BE;
}

.c4:checked:not(disabled) + .c5 {
  border: 6px solid #0D69F2;
}

.c4:checked:not(:disabled):focus + .c5,
.c4:checked:not(:disabled):hover + .c5 {
  background-color: #F1F2F4;
  border: 6px solid #0A54C2;
}

.c4:not(checked):not(:disabled):focus + .c5,
.c4:not(checked):not(:disabled):hover + .c5 {
  background-color: #F1F2F4;
  border: 1px solid #0D69F2;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: content-box;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  padding-left: 10px;
  color: #A7B0BE;
  margin: auto 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  padding-left: 9px;
  color: #A7B0BE;
}

fieldset:disabled .c7.c7 {
  color: #A7B0BE;
}

.c1 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-sizing: content-box;
  cursor: default;
}

fieldset:disabled .c0 {
  cursor: default;
}

<body>
    <div>
      <label
        class="c0 c1"
        disabled=""
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            data-testid="element"
            disabled=""
            type="radio"
            value="radio1"
          />
          <span
            class="c5 c6"
            disabled=""
          />
        </div>
        <span
          class="c7"
          disabled=""
        >
          text
        </span>
      </label>
    </div>
  </body>,
  "container": .c6 {
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  background-color: #FFFFFF;
  width: 20px;
  height: 20px;
  border: 1px solid #A7B0BE;
  border-radius: 50%;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

fieldset[data-dimension='s'] .c5 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c5 {
  border: 1px solid #A7B0BE;
}

.c3 {
  position: relative;
  display: inline-block;
  min-width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  min-width: 18px;
  height: 18px;
}

.c4 {
  opacity: 0;
  width: 0;
  height: 0;
}

.c4:checked:disabled + .c5 {
  border: 6px solid #A7B0BE;
}

.c4:checked:not(disabled) + .c5 {
  border: 6px solid #0D69F2;
}

.c4:checked:not(:disabled):focus + .c5,
.c4:checked:not(:disabled):hover + .c5 {
  background-color: #F1F2F4;
  border: 6px solid #0A54C2;
}

.c4:not(checked):not(:disabled):focus + .c5,
.c4:not(checked):not(:disabled):hover + .c5 {
  background-color: #F1F2F4;
  border: 1px solid #0D69F2;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: content-box;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  padding-left: 10px;
  color: #A7B0BE;
  margin: auto 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  padding-left: 9px;
  color: #A7B0BE;
}

fieldset:disabled .c7.c7 {
  color: #A7B0BE;
}

.c1 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-sizing: content-box;
  cursor: default;
}

fieldset:disabled .c0 {
  cursor: default;
}

<div>
    <label
      class="c0 c1"
      disabled=""
    >
      <div
        class="c2 c3"
      >
        <input
          class="c4"
          data-testid="element"
          disabled=""
          type="radio"
          value="radio1"
        />
        <span
          class="c5 c6"
          disabled=""
        />
      </div>
      <span
        class="c7"
        disabled=""
      >
        text
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioButton should render component with required properties 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c6 {
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  background-color: #FFFFFF;
  width: 20px;
  height: 20px;
  border: 1px solid #8A96A8;
  border-radius: 50%;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

fieldset[data-dimension='s'] .c5 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c5 {
  border: 1px solid #A7B0BE;
}

.c3 {
  position: relative;
  display: inline-block;
  min-width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  min-width: 18px;
  height: 18px;
}

.c4 {
  opacity: 0;
  width: 0;
  height: 0;
}

.c4:checked:disabled + .c5 {
  border: 6px solid #A7B0BE;
}

.c4:checked:not(disabled) + .c5 {
  border: 6px solid #0D69F2;
}

.c4:checked:not(:disabled):focus + .c5,
.c4:checked:not(:disabled):hover + .c5 {
  background-color: #F1F2F4;
  border: 6px solid #0A54C2;
}

.c4:not(checked):not(:disabled):focus + .c5,
.c4:not(checked):not(:disabled):hover + .c5 {
  background-color: #F1F2F4;
  border: 1px solid #0D69F2;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: content-box;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  padding-left: 10px;
  color: #2B313B;
  margin: auto 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  padding-left: 9px;
  color: #2B313B;
}

fieldset:disabled .c7.c7 {
  color: #A7B0BE;
}

.c1 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-sizing: content-box;
  cursor: pointer;
}

fieldset:disabled .c0 {
  cursor: default;
}

<body>
    <div>
      <label
        class="c0 c1"
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            data-testid="element"
            type="radio"
            value="radio1"
          />
          <span
            class="c5 c6"
          />
        </div>
        <span
          class="c7"
        >
          text
        </span>
      </label>
    </div>
  </body>,
  "container": .c6 {
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  background-color: #FFFFFF;
  width: 20px;
  height: 20px;
  border: 1px solid #8A96A8;
  border-radius: 50%;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

fieldset[data-dimension='s'] .c5 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c5 {
  border: 1px solid #A7B0BE;
}

.c3 {
  position: relative;
  display: inline-block;
  min-width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  min-width: 18px;
  height: 18px;
}

.c4 {
  opacity: 0;
  width: 0;
  height: 0;
}

.c4:checked:disabled + .c5 {
  border: 6px solid #A7B0BE;
}

.c4:checked:not(disabled) + .c5 {
  border: 6px solid #0D69F2;
}

.c4:checked:not(:disabled):focus + .c5,
.c4:checked:not(:disabled):hover + .c5 {
  background-color: #F1F2F4;
  border: 6px solid #0A54C2;
}

.c4:not(checked):not(:disabled):focus + .c5,
.c4:not(checked):not(:disabled):hover + .c5 {
  background-color: #F1F2F4;
  border: 1px solid #0D69F2;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: content-box;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  padding-left: 10px;
  color: #2B313B;
  margin: auto 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  padding-left: 9px;
  color: #2B313B;
}

fieldset:disabled .c7.c7 {
  color: #A7B0BE;
}

.c1 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-sizing: content-box;
  cursor: pointer;
}

fieldset:disabled .c0 {
  cursor: default;
}

<div>
    <label
      class="c0 c1"
    >
      <div
        class="c2 c3"
      >
        <input
          class="c4"
          data-testid="element"
          type="radio"
          value="radio1"
        />
        <span
          class="c5 c6"
        />
      </div>
      <span
        class="c7"
      >
        text
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioButton should render component with small dimension 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c6 {
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  background-color: #FFFFFF;
  width: 18px;
  height: 18px;
  border: 1px solid #8A96A8;
  border-radius: 50%;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

fieldset[data-dimension='s'] .c5 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c5 {
  border: 1px solid #A7B0BE;
}

.c3 {
  position: relative;
  display: inline-block;
  min-width: 18px;
  height: 18px;
}

fieldset[data-dimension='s'] .c2 {
  min-width: 18px;
  height: 18px;
}

.c4 {
  opacity: 0;
  width: 0;
  height: 0;
}

.c4:checked:disabled + .c5 {
  border: 6px solid #A7B0BE;
}

.c4:checked:not(disabled) + .c5 {
  border: 6px solid #0D69F2;
}

.c4:checked:not(:disabled):focus + .c5,
.c4:checked:not(:disabled):hover + .c5 {
  background-color: #F1F2F4;
  border: 6px solid #0A54C2;
}

.c4:not(checked):not(:disabled):focus + .c5,
.c4:not(checked):not(:disabled):hover + .c5 {
  background-color: #F1F2F4;
  border: 1px solid #0D69F2;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: content-box;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  padding-left: 9px;
  color: #2B313B;
  margin: auto 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  padding-left: 9px;
  color: #2B313B;
}

fieldset:disabled .c7.c7 {
  color: #A7B0BE;
}

.c1 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-sizing: content-box;
  cursor: pointer;
}

fieldset:disabled .c0 {
  cursor: default;
}

<body>
    <div>
      <label
        class="c0 c1"
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            data-testid="element"
            type="radio"
            value="radio1"
          />
          <span
            class="c5 c6"
          />
        </div>
        <span
          class="c7"
        >
          text
        </span>
      </label>
    </div>
  </body>,
  "container": .c6 {
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  background-color: #FFFFFF;
  width: 18px;
  height: 18px;
  border: 1px solid #8A96A8;
  border-radius: 50%;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

fieldset[data-dimension='s'] .c5 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c5 {
  border: 1px solid #A7B0BE;
}

.c3 {
  position: relative;
  display: inline-block;
  min-width: 18px;
  height: 18px;
}

fieldset[data-dimension='s'] .c2 {
  min-width: 18px;
  height: 18px;
}

.c4 {
  opacity: 0;
  width: 0;
  height: 0;
}

.c4:checked:disabled + .c5 {
  border: 6px solid #A7B0BE;
}

.c4:checked:not(disabled) + .c5 {
  border: 6px solid #0D69F2;
}

.c4:checked:not(:disabled):focus + .c5,
.c4:checked:not(:disabled):hover + .c5 {
  background-color: #F1F2F4;
  border: 6px solid #0A54C2;
}

.c4:not(checked):not(:disabled):focus + .c5,
.c4:not(checked):not(:disabled):hover + .c5 {
  background-color: #F1F2F4;
  border: 1px solid #0D69F2;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: content-box;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  padding-left: 9px;
  color: #2B313B;
  margin: auto 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  padding-left: 9px;
  color: #2B313B;
}

fieldset:disabled .c7.c7 {
  color: #A7B0BE;
}

.c1 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-sizing: content-box;
  cursor: pointer;
}

fieldset:disabled .c0 {
  cursor: default;
}

<div>
    <label
      class="c0 c1"
    >
      <div
        class="c2 c3"
      >
        <input
          class="c4"
          data-testid="element"
          type="radio"
          value="radio1"
        />
        <span
          class="c5 c6"
        />
      </div>
      <span
        class="c7"
      >
        text
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
